# backtest-dashboard

./: .gitignore  Cargo.toml  GEMINI.md  README.md  mix.exs
.claude/: settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-data-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-04-PLAN.md  01-05-PLAN.md  01-RESEARCH.md
.planning/phases/02-single-leg-engine/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-04-PLAN.md  02-05-PLAN.md
.planning/phases/03-multi-leg-advanced-sl/: 03-01-PLAN.md  03-02-PLAN.md  03-03-PLAN.md  03-04-PLAN.md  03-05-PLAN.md  03-06-PLAN.md
.planning/phases/04-reentry-momentum/: 04-01-PLAN.md  04-02-PLAN.md  04-03-PLAN.md  04-04-PLAN.md
.planning/phases/05-full-metrics-suite/: 05-01-PLAN.md  05-02-PLAN.md  05-03-PLAN.md  05-04-PLAN.md  05-05-PLAN.md  05-06-PLAN.md
.planning/phases/06-phoenix-nif-bridge/: 06-01-PLAN.md  06-02-PLAN.md  06-03-PLAN.md  06-04-PLAN.md  06-05-PLAN.md  06-06-PLAN.md
.planning/phases/07-liveview-ui/: 07-01-PLAN.md  07-02-PLAN.md  07-03-PLAN.md  07-04-PLAN.md  07-05-PLAN.md  07-06-PLAN.md  07-07-PLAN.md  07-08-PLAN.md
.planning/phases/08-portfolio-engine/: 08-01-PLAN.md  08-02-PLAN.md  08-03-PLAN.md  08-04-PLAN.md
.planning/phases/09-optimizer-hardening/: 09-01-PLAN.md  09-02-PLAN.md  09-03-PLAN.md  09-04-PLAN.md  09-05-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
Docs/: PRD.md  QuantEdge_PRD_v2.docx
apps/quantedge/: .gitignore  README.md  mix.exs
apps/quantedge/lib/: quantedge.ex
apps/quantedge/lib/quantedge/: application.ex  lot_sizes.ex  nif.ex  repo.ex  runs.ex  strategies.ex
apps/quantedge_core/benches/: baseline.json
apps/quantedge_core/crates/core/: Cargo.toml
apps/quantedge_core/crates/core/benches/: backtest_bench.rs
apps/quantedge_core/crates/core/src/: config.rs  execution.rs  leg.rs  lib.rs  momentum.rs  position.rs  reentry.rs  runner.rs  sl_types.rs  strategy.rs  strike.rs
apps/quantedge_core/crates/core/tests/: edge_cases.rs
apps/quantedge_core/crates/metrics/: Cargo.toml
apps/quantedge_core/crates/metrics/src/: core_metrics.rs  lib.rs  monte_carlo.rs  options_metrics.rs  walk_forward.rs
apps/quantedge_core/crates/nif/: Cargo.toml
apps/quantedge_core/crates/nif/src/: lib.rs
apps/quantedge_core/crates/portfolio/: Cargo.toml
apps/quantedge_core/crates/portfolio/src/: config.rs  correlation.rs  engine.rs  lib.rs  margin.rs  metrics.rs
apps/quantedge_web/: .gitignore  README.md  mix.exs
apps/quantedge_web/assets/: tsconfig.json
apps/quantedge_web/lib/: quantedge_web.ex
apps/quantedge_web/test/: test_helper.exs
config/: config.exs  dev.exs  expiry_calendar.toml  lot_sizes.toml  prod.exs  runtime.exs  test.exs
config/strategies/: example_iron_condor.toml  example_short_call.toml  example_straddle.toml
scripts/: csv_to_parquet.py  perf_check.sh  requirements.txt  validate_data.py
(+67 files in other folders)
