[package]
name = "quantedge-nif"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
quantedge-core = { path = "../core" }
quantedge-data = { path = "../data" }
quantedge-metrics = { path = "../metrics" }
quantedge-greeks = { path = "../greeks" }
quantedge-portfolio = { path = "../portfolio" }
quantedge-optimizer = { path = "../optimizer" }
rustler = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
