[package]
name = "quantedge-portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
quantedge-core = { path = "../core" }
quantedge-metrics = { path = "../metrics" }
ndarray = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
